--- a/main/ecuSimulator.rc
+++ b/main/ecuSimulator.rc
@@ -1,2 +1,1 @@
-1 24 uac.manifest  
-IDI_ICON1   ICON    DISCARDABLE "../../ictui/main/res/images/carToy_32x32.ico"
+IDI_ICON1   ICON    DISCARDABLE "res/images/ecuSimulator.ico"
